qtsensors-opensource-src (5.2.0~beta1+dfsg-1) UNRELEASED; urgency=low

  [ Dmitry Shachnev ]
  * New upstream beta release.
  * debian/patches/fix_grue_qmldir_path.diff: correctly set qmldir.path for
    grue example to fix FTBFS.
  * Update libqt5sensors5.symbols.
  * Bump qtbase and qtdeclarative build-dependencies to 5.2.0.
  * Make Vcs-Browser field canonical by dropping useless attribute.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 29 Oct 2013 21:31:54 +0400

qtsensors-opensource-src (5.1.1+dfsg-1) unstable; urgency=low

  * Initial release (Closes: #697509).

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 21 Oct 2013 22:47:26 -0300