@@ -11,7 +11,9 @@ Uploaders: Fathi Boudra <fabo@debian.org>,
 Build-Depends: debhelper (>= 9.0.0),
                pkg-kde-tools,
                qtbase5-private-dev (>= 5.2.0~),
-               qtdeclarative5-private-dev (>= 5.2.0~)
+               qtdeclarative5-private-dev (>= 5.2.0~),
+               xauth,
+               xvfb
 Standards-Version: 3.9.4
 Homepage: http://qt-project.org/
 Vcs-Git: git://anonscm.debian.org/pkg-kde/qt/qtsensors.git
